# obs-stream-effects

./: .travis.yml  CMakeLists.txt
data/effects/: signeddistancefield.effect
data/locale/: zh-CN.ini
source/: util-distancefield-generator.cpp  util-distancefield-generator.h
